--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+@import '../node_modules/modern-normalize/modern-normalize.css';
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
